--- a/client/templates/users.html.twig
+++ b/client/templates/users.html.twig
@@ -8,7 +8,6 @@
     z-index: 1;
     top: 0;
     overflow-x: hidden;
-    padding-top: 20px;
 }
 
 .left {
@@ -19,43 +18,66 @@
     right: 0;
 }
 
-th, td {
-    border: 1px solid #d3d3d3;
+.inner {
+    padding: 1rem;
 }
 
 table {
     width: 100%;
 }
+
+th, td {
+    border: 1px solid #d3d3d3;
+}
 {% endblock style %}
 
 {% block body %}
     <div class="split left">
-        <table>
-            <thead>
+        <div class="inner">
+            <h1>
+                Users
+            </h1>
+            <table>
+                <thead>
                 <tr>
                     <th>#</th>
                     <th>Name</th>
                     <th>E-mail</th>
                     <th>Roles</th>
                 </tr>
-            </thead>
-            <tbody>
-            {% for user in users %}
-                <tr>
-                    <td><a href="{{ path('users', {'id': user.id }) }}">{{ user.id }}</a></td>
-                    <td>{{ user.name }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.roles|join(', ') }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                    <tr>
+                        <td><a href="{{ path('users', {'id': user.id }) }}">{{ user.id }}</a></td>
+                        <td>{{ user.name }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>{{ user.roles|join(', ') }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="split right">
-        {% form_theme userForm 'form_table_layout.html.twig' %}
-        {{ form_start(userForm) }}
-        {{ form_widget(userForm) }}
-        <button type="submit">Save</button>
-        {{ form_end(userForm) }}
+        <div class="inner">
+            <h2>
+                {{ userId ? 'Update user #' ~ userId : 'Create user' }}
+            </h2>
+            {% form_theme userForm 'form_table_layout.html.twig' %}
+            {{ form_start(userForm) }}
+            {{ form_widget(userForm) }}
+            <button type="submit">{{ userId ? 'Update' : 'Create' }}</button>
+            {{ form_end(userForm) }}
+            {% if userId %}
+                <h2>
+                    Delete user #{{ userId }}
+                </h2>
+                {{ form_start(deleteUserForm) }}
+                {{ form_widget(deleteUserForm) }}
+                <button type="submit">Delete</button>
+                {{ form_end(deleteUserForm) }}
+            {% endif %}
+        </div>
     </div>
 {% endblock body %}
